# agent-economy-fraud

./: .env.example  .gitignore
.gpd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VERIFICATION-FINAL.md  state.json
GPD/: CONVENTIONS.md  ORIGINALITY-AUDIT.md  PROJECT.md  REFEREE-REPORT-R2.md  REFEREE-REPORT.md  STATE.md  project-contract.repaired.json  state.json
analysis/: a2a-attack-taxonomy.md  agent-capabilities-vs-humans.md  agent-invariant-signals.md  agent-invariant-violations.md  attack-chain-mapping.md  attack-injection-summary.md  computational-requirements.md  core-explanation.md  data-acquisition-plan.md  dataset-construction.md  detection-methodology.md  empirical-validation-results.md  error_propagation.py  fraud-detection-validation.md  hard-to-vary-revalidation.md  hard-to-vary-validation.md  human-invariants-complete.md  implementation-guidance.md  industry-recommendations.md  invariant-based-attack-classification.md  (+17 more)
src/: README.md  pyproject.toml
src/a2a_detection/: __init__.py
src/a2a_detection/data/: __init__.py  erc8004.py  transactions.py
src/a2a_detection/scripts/: bridge_dune_data.py  fetch_dune_batched.py  fetch_dune_data.py  ingest_rpc.py  inject_attacks.py  poll_dune.py  run_overlap_gate.py  validate_fraud_detection.py  validate_precision.py
src/a2a_detection/signals/: __init__.py  cross_platform.py  economic_rationality.py  fusion.py  label_cleaner.py  network_topology.py  temporal_consistency.py  value_flow.py
src/a2a_detection/tests/: conftest.py  test_attack_injection.py  test_signals.py
(+111 files in other folders)
